--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,11 +16,11 @@ phases:
         - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-      - docker build --tag $REPOSITORY_URI:$TAG .
+      - docker build -t 342507611612.dkr.ecr.us-west-2.amazonaws.com/eksws-codepipeline-ecrdockerrepository-iuviq4gzedzw:latest .
 
   post_build:
     commands:
-      - docker push $REPOSITORY_URI:$TAG
+      - docker push 342507611612.dkr.ecr.us-west-2.amazonaws.com/eksws-codepipeline-ecrdockerrepository-iuviq4gzedzw:latest
       - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
       - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
